# deck-screenshot-explorer

./: .gitignore  LICENSE  main.py  package.json  plugin.json  pnpm-lock.yaml  settings.pyi
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile  build.rs  entrypoint.sh
backend/assets/assets/: index-C2iCEgyC.js  index-C2iCEgyC.js.map  style-sNI3e4XR.css  vendor-Bt7xf5c8.js  vendor-Bt7xf5c8.js.map  vendor.vue-DI5R_iIY.js  vendor.vue-DI5R_iIY.js.map
backend/assets/assets/pages/: index-DoOV57yZ.js  index-DoOV57yZ.js.map
backend/frontend/: .env.development  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
backend/frontend/src/: App.vue  main.ts  styles.css
backend/frontend/src/components/: HeaderView.vue  LoadingView.vue
backend/frontend/src/components/Deck/: DeckApp.vue  DeckPaging.vue  DeckSS.vue  DeckUser.vue
backend/frontend/src/composables/: use-backend-fetch.ts  use-deck.ts
backend/frontend/src/pages/: [...catchall].vue  index.vue
backend/frontend/src/pages/s/[user]/: index.vue
backend/frontend/src/pages/s/[user]/[app]/: index.vue
backend/frontend/src/types/: components.d.ts  imports.d.ts  router.d.ts
backend/src/: main.rs  models.rs  routes.rs  steam.rs
scripts/: package-contents.py
src/: index.tsx
