[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# vdfr vendor
byteorder = "1.5.0"
crc32fast = "1.4.2"

# backend related
anyhow = "1"
axum = { version = "0.7.5", features = ["tracing", "query", "json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
keyvalues-serde = "0.2.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
urlencoding = "2.1.3"
dunce = "1.0.4"
mime_guess = "2.0.4"