[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# vdf/keyvalues
vdfr = { git = "https://github.com/noaione/vdfr.git", branch = "nom-refactor", default-features = false }
keyvalues-serde = "0.2.1"

# web related
axum = { version = "0.8.1", features = ["tracing", "query", "json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
urlencoding = "2.1.3"

# important essentials
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"

anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

# other
dunce = "1.0.5"
mime_guess = "2.0.5"

[profile.release]
lto = true
incremental = false
opt-level = "z"
codegen-units = 1
